# ABOUTME: Python project definition and dependencies for the TempleHE API.
# ABOUTME: Uses uv for package management. Run `uv sync` to install.

[project]
name = "templehe-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
    "pyotp>=2.9",
    "cryptography>=43.0",
    "sentry-sdk[fastapi]>=2.14",
    "structlog>=24.4",
    "sendgrid>=6.11",
    "boto3>=1.35",  # Cloudflare R2 via S3-compatible API
    "bleach>=6.1",  # HTML/text sanitization for customer-supplied free-text fields
    "twilio>=9.10.5",  # SMS dispatch via Messaging Service SID
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "B008",  # FastAPI Depends() calls in function signatures
]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]  # migration files contain long SQL strings

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
